Avoid scrollbar when it's not necessary

--- a/pootle/static/css/style.css
+++ b/pootle/static/css/style.css
@@ -612,7 +612,7 @@ html[dir="rtl"] #nav-main li
 
     margin-top: 20px;
     height: 42px;
-    line-height: 42px;
+    line-height: 41px;
     -webkit-box-sizing: border-box;
        -moz-box-sizing: border-box;
             box-sizing: border-box;
